# hengel_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
hengel/: CMakeLists.txt  package.xml
hengel_bringup/: CMakeLists.txt  package.xml
hengel_bringup/launch/: hengel_core.launch  hengel_lidar.launch  hengel_model.launch  hengel_remote.launch  hengel_robot.launch  turtlebot3_core.launch
hengel_bringup/scripts/: create_udev_rules
hengel_bringup/src/: hengel_diagnostics.cpp
hengel_camera/: CMakeLists.txt  package.xml  setup.py
hengel_camera/launch/: flagBotCamera.launch  flagBotCamera_unstitched.launch  hengel_wide_cam_1.launch  hengel_wide_cam_2.launch  hengel_wide_cam_3.launch  hengel_wide_cam_4.launch
hengel_camera/msg/: CmpImg.msg
hengel_camera/scripts/: capture_homography.py  feature_match.py  globalAlignment.py  labs_virtual.py  line_thickener.py  markRobotView.py  picam_publisher.py  picam_publisher2.py  picam_publisher3_left.py  picam_publisher4.py  picam_publisher4_right.py  picam_publisher_1.py  picam_publisher_2.py  picam_publisher_3.py  picam_publisher_4.py  picam_undistort1.py  predict_globalmap_publisher.py  sift_surf.py  simulate_genius.py  tmp_canvas.eps  undistort.py  velodyneCompensation.py  virtualMap.py  virtualMap_unstitched.py  visualCompensation.py  visualCompensation_unstitched.py  wide_camera_publisher_1.py  wide_camera_publisher_2.py  wide_camera_publisher_4.py
hengel_camera/src/: gstreamer_view_ros.cpp  test  wide_camera_publisher_1.py  wide_camera_publisher_3.py
hengel_camera/util/: homography_please.py  summed_image_test.py  undistort.py
hengel_description/: CMakeLists.txt  package.xml
hengel_description/urdf/: turtlebot3_burger.urdf.xacro
hengel_jetson/: CMakeLists.txt  package.xml
hengel_navigation/: CMakeLists.txt  optitrack_180907_054535.txt  optitrack_180907_063456.txt  package.xml  setup.py
hengel_navigation/data_path/: path_D.txt  path_J.txt  path_K.txt  path_W.txt  path_X.txt  path_Z.txt
hengel_navigation/launch/: flagbot_keyop.launch  flagbot_navigation.launch  hengel_alphabet.launch  hengel_lidar_odometry.launch  hengel_main.launch  hengel_navigation_control.launch  hengel_odometry.launch  hengel_paint_drawing.launch  hengel_paint_lettter.launch  hengel_print_drawing.launch  hengel_print_lettter.launch  hengel_simulation.launch  hengel_wheel_odometry.launch  turtlebot3_model.launch  turtlebot3_remote.launch  turtlebot3_robot.launch
hengel_navigation/msg/: ValveInput.msg
hengel_navigation/position_log/: position_180907_023932.txt  position_180907_024140.txt  position_180907_024458.txt  position_180907_024626.txt  position_180907_024742.txt
hengel_navigation/scripts/: .navigation_control.py.swp  alphabet_tracer.py  around_view.py  circle_pathmaker.py  concentric_pathmaker.py  create_image_with_waypoint.py  create_udev_rules  crosspoint_docking.py  crosspoint_rotation.py  hengel_keyop.py  hengel_keyop_publisher.py  lidar_odometry.py  main_program.py  make_path_from_contour.py  navigation_control.py  odometry_publisher.py  optitrack_coordinate_calibration.py  optitrack_endpoint_log_analyzer.py  paint_drawing.py  paint_korea.py  paint_letter.py  paint_lieul.py  paint_selectfile.py  paint_square.py  pathmaker_ui.py  pi_cam_manager.py  printer_drawing.py  printer_letter.py  real_globalmap.py  start_program.py  test_code.py  time_print.py  unit_test_applicator.py  wheel_odometry.py
hengel_navigation/srv/: GlobalFeedback.srv
hengel_odometry/: CMakeLists.txt  README.md  package.xml  setup.py
hengel_odometry/msg/: hengel_img.msg
hengel_odometry/scripts/: RANSAC.py  birdview.py  raw_img_publisher.py  visual_odometry.py
hengel_paint_actuator/: CMakeLists.txt  package.xml
hengel_path_manager/: CMakeLists.txt  package.xml  setup.py
hengel_path_manager/alphabet_path/: 180605_164940.txt  li_eul_continuous.txt  li_eul_discrete.txt  path_+_1.txt  path_1_1.txt  path_A_1.txt  path_A_2.txt  path_B_1.txt  path_C.txt  path_C_1.txt  path_D_1.txt  path_E_1.txt  path_E_2.txt  path_F.txt  path_F_1.txt  path_F_2.txt  path_G_1.txt  path_H.txt  path_H_1.txt  path_H_2.txt  path_H_3.txt  path_I.txt  path_I_1.txt  path_I_2.txt  path_I_3.txt  path_J_1.txt  path_J_2.txt  path_K_1.txt  path_K_2.txt  path_L.txt  path_L_1.txt  path_M.txt  path_M_1.txt  path_N_1.txt  path_O_1.txt  path_P.txt  path_P_1.txt  path_Q.txt  path_Q_1.txt  path_Q_2.txt  (+17 more)
hengel_path_manager/alphabet_path_copy/: korean_peninsula.txt  li_eul_continuous_original.txt  path_E_2.txt  path_I_1.txt  path_I_2.txt  path_I_3.txt  path_J_1.txt  path_J_2.txt  path_L_1.txt  path_O_1.txt  path_Y_2.txt
hengel_path_manager/launch/: hengel_image_estimator.launch
hengel_path_manager/path_made/: 180501_124422.txt  180501_124843.txt
hengel_path_manager/scripts/: hengel_image_estimator.py  image_estimator.py  pathmaker_drag2.py  pathmaker_ui.py  pathplayer_ui.py
hengel_path_manager/util/: edit_alphabet_txtfile.py
hengel_path_tracer/: CMakeLists.txt  package.xml  setup.py
hengel_path_tracer/launch/: hengel_alphabet.launch
hengel_path_tracer/scripts/: alphabet_tracer.py
hengel_pathmaker/: README.md  pathmaker_drag2.py  pathmaker_ui.py  pathplayer_ui.py
hengel_pathmaker/txtfile/: path.txt
hengel_slam/: CMakeLists.txt  package.xml
hengel_slam/scripts/: visual_odometry.py
hengel_teleop/: CMakeLists.txt  package.xml  setup.py
hengel_teleop/launch/: hengel_teleop_key.launch  turtlebot3_teleop_key.launch
hengel_teleop/scripts/: hengel_teleop_key
hengel_visual_odometry/: CMakeLists.txt  README.md  package.xml  setup.py
hengel_visual_odometry/calibrate_info/: Distortion.xml  Intrinsic.xml
hengel_visual_odometry/launch/: hengel_floor_cam.launch  hengel_visual_odometry.launch
hengel_visual_odometry/scripts/: RANSAC.py  around_view.py  birdview.py  crosspoint_docking.py  crosspoint_rotation.py  find_homography.py  globalmap.py  homography.py  image_calibrate.py  pi_floorcam.py  pi_floorcam_publisher.py  predict_globalmap_publisher.py  raw_img_publisher.py  real_globalmap_publisher.py  visual_odometry.py
sandbot_valve_control/: CMakeLists.txt  package.xml
(+30 files in other folders)
