<?xml version="1.0"?>
<package format="2">
  <name>hengel_navigation</name>
  <version>0.2.1</version>
  <description>
    Provides teleoperation using keyboard for TurtleBot3.
  </description>
  <license>BSD</license>
  <author>Melonee Wise</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>hengel_camera</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>